--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --config ./bundler/webpack.dev.js"
+  ,  "deploy":"vercel --prod"
   },
   "dependencies": {
     "@babel/core": "^7.17.10",
@@ -21,6 +22,7 @@
     "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
     "three": "^0.140.0",
+    "vercel": "^28.11.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
